# agentdog_lite_summer_camp

./: .gitignore  AgentDoG_Lite_轨迹级安全诊断技术报告_提交版.docx  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: dll_train_qwen35_agentdog_sft_lora_h800.yaml  eval_methods.yaml  train_agentdog15_continued_lora.yaml  train_agentdog15_continued_lora_h800.yaml  train_agentdog15_continued_lora_h800_lr1e5.yaml  train_agentdog15_continued_lora_h800_r16.yaml  train_agentdog15_continued_lora_lr1e5.yaml  train_agentdog15_continued_lora_r8.yaml  train_qwen35_fallback_lora.yaml  train_qwen35_fallback_lora_h800.yaml  train_qwen35_full_sft_atbench_rjudge_clean_h800.yaml  train_qwen35_full_sft_cot_deepseek_safe_refined_h800.yaml  train_qwen35_full_sft_hard_safe_refined_v1_from_best_lr1e6_h800.yaml  train_qwen35_full_sft_hard_safe_refined_v1_h800.yaml  train_qwen35_full_sft_llamafactory_best_atbench_rjudge_clean_h800.yaml  train_qwen35_full_sft_llamafactory_h800.yaml  train_qwen35_full_sft_llamafactory_l40_ddp.yaml  train_qwen35_full_sft_teacher_agreed_h800.yaml
docs/: volcano_l40_setup_prompt.md
report/: failure_cases.md  results_table.md
scripts/: backfill_eval5_failure_analysis.py  build_hard_safe_refined_dataset.py  build_high_quality_20_cases.py  build_training_data.py  check_environment.py  codex_audit_hard_safe_refined_dataset.py  dll_eval_qwen35_prompt_auditor.py  download_data.py  download_models.py  evaluate.py  evaluate_eval5.py  export_final_adapter.py  prepare_official_repo.sh  rebuild_full_sft_failure_dataset.py  setup_h800_env.sh  setup_l40_env.sh  (+3 more)
(+21 files in other folders)
