[project]
name = "agentdog-lite-summer-camp"
version = "0.1.0"
description = "AgentDoG-Lite continued LoRA/SFT pipeline from AgentDoG1.5-Qwen3.5-0.8B."
requires-python = ">=3.10,<3.12"
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.20.0",
  "huggingface-hub>=0.24.0",
  "pandas>=2.2.0",
  "peft>=0.12.0",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.5.0",
  "sentencepiece>=0.2.0",
  "tokenizers>=0.19.0",
  "torch>=2.4.0",
  "transformers>=4.44.0",
  "trl>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

