[project]
name = "agentdog-lite-summer-camp"
version = "0.1.0"
description = "AgentDoG-Lite continued LoRA/SFT pipeline from AgentDoG1.5-Qwen3.5-0.8B."
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=1.10.0",
  "datasets>=3.0.0",
  "fastapi",
  "huggingface-hub>=0.24.0",
  "pandas>=2.2.0",
  "peft>=0.17.0",
  "openai",
  "pydantic",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.5.0",
  "sentencepiece>=0.2.0",
  "tensorboard",
  "tokenizers>=0.19.0",
  "torch>=2.4.0",
  "transformers>=4.57.0",
  "trl>=0.24.0",
  "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
